style fix to prevent statements from overflowing their divs

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -2517,7 +2517,7 @@ hr.stats{
   margin-bottom: 5px;
 }
 
-.break, h4{
+.break, .markdown, h4{
   overflow-wrap: break-word;
   word-wrap: break-word;
   -ms-word-break: break-all;
